--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  username: unn4m3d
+  password: '<%= ENV['DBPWD']%>'
+  database: minecraft
+  host: localhost
