--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
 
 production:
   adapter: mysql2
-  username: unn4m3d
+  username: minecraft
   password: '<%= ENV['DBPWD']%>'
   database: minecraft
   host: localhost
