--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,5 +1,5 @@
-protection : "test xor key"
-launcher_version : "Test version"
+protection : "hellish"
+launcher_version : "0.1.4"
 clients_path : "public/clients"
 launcher_path:
   generic: "launcher.jar"
@@ -8,7 +8,7 @@ launcher_path:
 skins:
   default: default_skin.png
   directory: skins
-ignore_regex: ".*\\.(json|config|points|world|cfg|txt|dat)$"
+ignore_regex: ".*\\.(json|config|points|world|cfg|txt|dat|properties|ini)$"
 skin_dimensions:
   - width : 64
     height: 32
