--- a/nginx_unix.conf
+++ b/nginx_unix.conf
@@ -1,9 +1,9 @@
 upstream puma {
-	server unix:///home/minecraft/puma.sock
+	server unix:///home/minecraft/puma.sock;
 }
 
 server {
-	listen 443 default_server ssl;
+	listen 443 ssl;
 	server_name unn4m3d.ddns.net;
 	keepalive_timeout 5;
 	root /home/minecraft/tsmc/public;
@@ -21,12 +21,27 @@ server {
 	{
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $http_host;
+		proxy_set_header X-Forwarded-Proto https;
 		proxy_pass http://puma;
 	}
 }
 
 server {
-	listen 80;
+	listen 80 default_server;
 	server_name unn4m3d.ddns.net;
-	return 301 https://$server_name$request_uri?;
+	root /home/minecraft/tsmc/public;
+	
+	location / {
+		return 301 https://$server_name$request_uri?;
+	}
+
+	location /api/ {
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header Host $http_host;
+		proxy_pass http://puma;
+	}
+
+	location /clients/ {
+		try_files $uri $uri/ =404;
+	}
 }
